# firm-microsim-paper

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  paper.yml
analysis/: dominated_region_mass.py  placebo_bunching.py  reform_menu_common_base.py
bunching/: __init__.py  __main__.py  figures.py  model.py
data/: README.md
data/processed/: obr_vat_bunching.csv
dynamic/: __init__.py  __main__.py  figures.py  model.py
figures/: plot_band_distributions.py  plot_turnover_distribution.py
firm_microsim/: __main__.py  calibration.py  config.py  data_loader.py  figures.py  generate.py  report.py  validate.py
notch/: __init__.py  __main__.py  figures.py
paper/: .gitignore  README.md  YGTemplate.sty  _quarto.yml  body.tex  build_site.py  firm-microsim-theme.css  frontmatter.tex  index.qmd  main.tex  main_preview.tex  quarto-template.tex  references.bib  render_web.py  title_metadata.tex
paper/Appendix/: a_data.tex  a_inference.tex  appendix.tex
paper/Sections/: background.tex  behavioural.tex  bunching.tex  conclusion.tex  counterfactuals.tex  data.tex  intro.tex  literature.tex  model.tex  results.tex  static.tex
paper/future/: a_notch.tex  (+2 more)
results/: bunching_inference_regenerated.txt  calibration_accuracy.txt  dominated_region_mass.txt  dynamic_reform_results.txt  placebo_bunching.txt  reform_menu_common_base.txt  static_preview.html
scripts/: plot_obr_bunching.py  report_calibration.py
static/: __init__.py  __main__.py  figures.py  model.py
tests/: test_package_smoke.py  test_validate.py
(+33 files in other folders)
